# wasm-bindgen

./: test_notes.txt
.cargo/: config.toml
crates/backend/src/: codegen.rs
crates/cli-support/src/: lib.rs
crates/cli-support/src/js/: binding.rs  mod.rs
crates/cli-support/src/transforms/externref/: mod.rs
crates/cli/src/: wasm_bindgen.rs
crates/macro-support/src/: codegen.rs
crates/test/: Cargo.toml
crates/test-macro/src/: lib.rs
crates/test/.cargo/: config.toml
crates/wasm-interpreter/src/: lib.rs
examples/hello_world/: Cargo.toml  index.js  package.json
examples/hello_world/.cargo/: Cargo.toml
examples/hello_world/src/: lib.rs
src/: externref.rs  lib.rs
tests/: reproducer.rs
